2003-07-22  Paul Eggert  <eggert@twinsun.com>

	* modules/xalloc (Depends-on): Add exitfail.
	* modules/xmemcoll: Likewise.

2003-07-20  Jim Meyering  <jim@meyering.net>

	* modules/closeout (Depends-on): Add exitfail.
	Suggestion from Bruno Haible.

2003-07-18  Bruno Haible  <bruno@clisp.org>

	* modules/getndelim2: New file.
	* modules/getline: Share files with module getndelim2.
	* modules/getnline: Depend on getndelim2 instead of sharing files with
	it. Add getnline.c to lib_SOURCES.
	* MODULES.html.sh (func_all_modules): Add getndelim2.

2003-07-17  Bruno Haible  <bruno@clisp.org>

	* modules/getnline: New file.
	* modules/getline: Add lib/getndelim2.c to source file list.
	* MODULES.html.sh (func_all_modules): Add getnline.

2003-07-17  Bruno Haible  <bruno@clisp.org>

	* configure.in: Remove file.
	* Makefile.in: Remove file.

2003-07-17  Bruno Haible  <bruno@clisp.org>

	* MODULES.html.sh: Put the </BODY> right before </HTML>.

2003-07-16  Jim Meyering  <jim@meyering.net>

	* modules/save-cwd: Depend on xgetcwd.  From Derek Price.

2003-07-15  Jim Meyering  <jim@meyering.net>

	* modules/save-cwd: Don't depend on error.  From Derek Price.

2003-07-14  Simon Josefsson  <jas@extundo.com>

	* modules/mempcpy: New file.
	* MODULES.html.sh (func_all_modules): Add mempcpy.

2003-07-14  Paul Eggert  <eggert@twinsun.com>

	* modules/getdate, modules/posixtm: Depend on mktime.

2003-07-10  Simon Josefsson  <jas@extundo.com>

	* modules/strchrnul (Makefile.am): Add strchrnul.h.

2003-06-26  Bruno Haible  <bruno@clisp.org>

	* modules/human: Depend on module stdbool.

2003-06-25  Bruno Haible  <bruno@clisp.org>

	* modules/readlink: New file.
	* modules/xreadlink: Depend on it.
	* MODULES.html.sh (func_all_modules): Add readlink.

2003-06-22  Bruno Haible  <bruno@clisp.org>

	* modules/safe-read: Add m4/ssize_t.m4.
	* modules/xreadlink: Add m4/ssize_t.m4.

2003-06-11  Simon Josefsson  <jas@extundo.com>

	* modules/sysexits: New file.