@@ -1,0 +1,21 @@
+Description:
+getpass() function: read a password of arbitrary length from /dev/tty.
+
+Files:
+lib/getpass.c
+m4/getpass.m4
+
+Depends-on:
+unlocked-io
+getline
+
+configure.ac:
+gl_FUNC_GETPASS_GNU
+
+Makefile.am:
+
+Include:
+
+Maintainer:
+Jim Meyering, glibc
+
